tests/whiley/valid/test_905.wyal
define f_requires_0(int[] x) is:
    |x| > 0


assert "index out of bounds (negative)":
    forall(int z, int[] x):
        if:
            f_requires_0(x)
            z == |x|
        then:
            (z - 1) >= 0


