tests/whiley/invalid/test_2.wyal
define f_requires_0(int[] x) is:
    |x| > 0


assert "index out of bounds (negative)":
    forall(int[] x, int y):
        if:
            f_requires_0(x)
            y == x[0]
        then:
            -1 >= 0


